[package]
name = "rusty_musty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#async
tokio = { version = "1.20.1", features = ["full"] }

#logging
log = "0.4.17"
pretty_env_logger = "0.4.0"

#server
warp = "0.3.2"

#seriliazation
serde_json = "1.0.83"

#graphQl
async-graphql = "4.0.7"
async-graphql-warp = "4.0.7"